@@ -1712,11 +1712,18 @@ int connection_state_machine(server *srv, connection *con) {
 										ERR_error_string(err, NULL));
 							} while((err = ERR_get_error()));
 						} else if (errno != 0) { /* ssl bug (see lighttpd ticket #2213): sometimes errno == 0 */
-							log_error_write(srv, __FILE__, __LINE__, "sddds", "SSL (error):",
+							switch(errno) {
+							case EPIPE:
+							case ECONNRESET:
+								break;
+							default:
+								log_error_write(srv, __FILE__, __LINE__, "sddds", "SSL (error):",
 									ssl_r, ret, errno,
 									strerror(errno));
+								break;
+							}
 						}
-	
+
 						break;
 					default:
 						while((err = ERR_get_error())) {
@@ -1724,7 +1731,7 @@ int connection_state_machine(server *srv, connection *con) {
 									ssl_r, ret,
 									ERR_error_string(err, NULL));
 						}
-	
+
 						break;
 					}
 				}
